[tool.poetry]
name = "courses"
version = "0.1.0"
description = ""
authors = ["Simon Stavland <simon.stavland@cognite.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.1"
scikit-learn = "^0.23.2"
tensorflow = "^2.3.0"
keras = "^2.4.3"
matplotlib = "^3.3.1"
seaborn = "^0.10.1"
torch = "^1.6.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
black = "^20.8b1"
isort = "^5.5.1"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
